Fixed Safari Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,11 @@ Section 2 Styling
   transition: all .8s ease;
 }
 
+#gallery li:nth-child(6) {
+  -webkit-position: relative;
+  top: -1.4em;
+}
+
 #gallery li:nth-child(8) {
   position: relative;
   top: 3.3em;
